<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">angelBiker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guardian Angel Biker</string>
    <string name="nav_header_subtitle">developed by Daniel Herreros Monteagudo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="Ubicaciones">Ubicaciones</string>
    <string name="motos">Motos</string>
    <string name="add_location">add location</string>
    <string name="new_location">New location</string>
    <string name="coordinate_hint">+/-0.000</string>
    <string name="longitude">Longitude</string>
    <string name="location_coordinates">Location coordinates:</string>
    <string name="new_location_info">New location Info</string>
    <string name="name">Name:</string>
    <string name="latitude">Latitude:</string>
    <string name="description">Description:</string>
    <string name="add_location_image">add location image</string>
    <string name="location_image">location image</string>
    <string name="category">Category:</string>
    <string name="sample_category">Sample Category</string>
    <string name="coordinate_latitude_format">Latitude: %3.4f</string>
    <string name="coordinate_longitude_format">Longitude: %3.4f</string>
    <string name="hello_blank_fragment" tools:ignore="DuplicateDefinition">Hello blank fragment</string>
    <string name="gps_is_disabled_alert_dialog_message">GPS is disabled</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="would_you_like_to_enable_question">Would you like to enable it?</string>

    <string name="missing_name">Missing name</string>
    <string name="missing_description">Missing description</string>
    <string name="missing_photo">Missing photo</string>
    <string name="missing_coordinates">Missing coordinates</string>
    <string name="missing_category">Missing category</string>

    <string name="category_hint">Category</string>
    <string name="add">Add</string>
    <string name="add_new_category">Add new category</string>
    <string name="ok">OK</string>

    <string name="more">More</string>
    <string name="name_hint">Name</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="reset_app">Reset app</string>
    <string name="location_number">Locations Nº</string>
    <string name="delete_location">Delete location</string>

    <string name="mapbox_access_token">pk.eyJ1Ijoib21lZ2FuaXRyb3pldXMiLCJhIjoiY2ttY2phM29kMTU1YzJ2cWxvZmlzam5nOSJ9.OD4jjt9bFt9bny0UlUOkdg</string>
    <string name="map_style">mapbox://styles/omeganitrozeus/ckljpbyb40kxb17puavio79im</string>
</resources>