<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.angelbiker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/Motos"
        android:name="com.example.angelbiker.ui.motos.ListaMarcasActivity"
        android:label="@string/motos"
        tools:layout="@layout/activity_lista_marcas" />

    <activity
        android:id="@+id/Ubicaciones"
        android:name="com.example.angelbiker.ui.location.listLocation.ListLocationActivity"
        android:label="@string/Ubicaciones"
        tools:layout="@layout/activity_list_location" />
</navigation>