<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    tools:context=".ui.dialogs.GpsAlertDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="24sp"
            android:text="@string/gps_is_disabled_alert_dialog_message"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:text="@string/would_you_like_to_enable_question"
            android:textSize="16sp"
            android:layout_marginRight="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:backgroundTint="@color/backgroundColor"
                android:textColor="@color/primary"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundColor"
                android:textColor="@color/primary"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/enable"
                android:layout_marginLeft="8dp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>